tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_rounding_fail/execute__tests__noirc_frontend_tests_arithmetic_generics_rounding_fail_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type [Field; 2], found type [Field; 3]
  ┌─ src/main.nr:5:27
  │
5 │             round::<3, 2>([1, 2, 3]);
  │                           ---------
  │

Aborting due to 1 previous error
