tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_rounding_fail/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type [Field; 2], found type [Field; 3]
  ┌─ src/main.nr:5:27
  │
5 │             round::<3, 2>([1, 2, 3]);
  │                           ---------
  │

Aborting due to 1 previous error
